@@ -4210,12 +4210,18 @@ end</example></description>
 		<command id="setheropicture">
 			<canon>set hero picture (who,picture,type)</canon>
 			<shortname>set hero picture</shortname>
-			<description>Permanently changes a hero&apos;s picture. The first argument is the hero's position in the party as returned by <ref>findhero</ref>. The second argument is the index number of the picture to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle picture or their walkabout picture. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<description>Permanently changes a hero&apos;s picture. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is the index number of the picture to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle picture or their walkabout picture. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<seealso>
+				<ref>resetheropicture</ref>
+			</seealso>
 		</command>
 		<command id="setheropalette">
 			<canon>set hero palette (who,palette,type)</canon>
 			<shortname>set hero palette</shortname>
-			<description>Permanently changes a hero&apos;s 16-color palette. The first argument is the hero's position in the party as returned by <ref>findhero</ref>. The second argument is the index number of the 16-color palette to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<description>Permanently changes a hero&apos;s 16-color palette. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is the index number of the 16-color palette to use, and the last argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<seealso>
+				<ref>resetheropalette</ref>
+			</seealso>
 		</command>
 		<command id="getheropicture">
 			<canon>get hero picture (who,type)</canon>
@@ -4226,6 +4232,22 @@ end</example></description>
 			<canon>get hero palette (who,type)</canon>
 			<shortname>get hero palette</shortname>
 			<description>A function that returns the index number of a hero&apos;s 16-color palette. The first argument is the hero's position in the party as returned by <ref>findhero</ref>. The second argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are checking the hero's battle palette or their walkabout palette. If the second argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+		</command>
+		<command id="resetheropicture">
+			<canon>reset hero picture (who,type)</canon>
+			<shortname>reset hero picture</shortname>
+			<description>Resets a hero&apos;s picture that was previously changed with <ref>setheropicture</ref> back to the default picture. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle picture or their walkabout picture. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<seealso>
+				<ref>setheropicture</ref>
+			</seealso>
+		</command>
+		<command id="resetheropalette">
+			<canon>reset hero palette (who,type)</canon>
+			<shortname>reset hero palette</shortname>
+			<description>Resets a hero&apos;s palette that was previously changed with <ref>setheropalette</ref> back to the default palette. The first argument is the hero's position in the party. (use <ref>findhero</ref> if you want refer to the hero by name). The second argument is a constant <ref>insidebattle</ref> or <ref>outsidebattle</ref>, which determines if you are changing the hero's battle palette or their walkabout palette. If the last argument is left out, <ref>outsidebattle</ref> is assumed.</description>
+			<seealso>
+				<ref>setheropicture</ref>
+			</seealso>
 		</command>
 		<command id="alternpc">
 			<canon>alter NPC (who,NPCstat,value)</canon>
@@ -4854,12 +4876,12 @@ end</example>
 		<command id="insidebattle">
 			<canon>inside battle</canon>
 			<shortname>inside battle</shortname>
-			<description>A constant used in the <ref>getheropicture</ref>, <ref>setheropicture</ref>, <ref>getheropalette</ref> and <ref>setheropalette</ref> commands to represent the battle graphics.</description>
+			<description>A constant used in the <ref>getheropicture</ref>, <ref>setheropicture</ref>, <ref>getheropalette</ref>, <ref>setheropalette</ref>, <ref>resetheropicture</ref> and <ref>resetheropalette</ref> commands to represent the battle graphics.</description>
 		</command>
 		<command id="outsidebattle">
 			<canon>outside battle</canon>
 			<shortname>outside battle</shortname>
-			<description>A constant used in the <ref>getheropicture</ref>, <ref>setheropicture</ref>, <ref>getheropalette</ref> and <ref>setheropalette</ref> commands to represent the walkabout graphics.</description>
+			<description>A constant used in the <ref>getheropicture</ref>, <ref>setheropicture</ref>, <ref>getheropalette</ref>, <ref>setheropalette</ref>, <ref>resetheropicture</ref> and <ref>resetheropalette</ref> commands to represent the walkabout graphics.</description>
 		</command>
 		<command id="colorconstants">
 			<canon>Color Constants</canon>
