@@ -1,12 +1,13 @@
 WHAT IS NEW?
 
-??? ?? ???? [????]
+??? ?? ???? [Z???]
 
   * New Features
 
   * Bugfixes
 
   * New Plotscripting Stuff
+    * "reset hero picture" and "reset hero palette" [James]
 
   * Vikings of Midgard
 
